v3.7.6 (XXXX-XX-XX)
-------------------

* Fix a potential nullptr access in AsyncAgencyComm in case there was a specific
  error when sending an agency request.

* Clean up agency change log, cluster info caches.


v3.7.5 (2020-12-09)
-------------------

* Fixed ES-662 by introducing refactored thread pool to make more efficient
  consolidation and commit routines for links of ArangoSearch views.

  Added new command line options for fine-grained ArangoSearch maintenance
  control:
  - `--arangosearch.commit-threads` - max number of ArangoSearch commit
    threads
  - `--arangosearch.commit-threads-idle` - min number of ArangoSearch
    commit threads
  - `--arangosearch.consolidation-threads` - max number of ArangoSearch
    consolidation threads
  - `--arangosearch.consolidation-threads-idle` - min number of ArangoSearch
    consolidation threads

  Deprecated the following command line options:
  - `--arangosearch.threads` - will be used in --arangosearch.commit-threads`
    and `--arangosearch.consolidation-threads` as provided value divided by 2
    if set to non-autodetect value > 0
  - `--arangosearch.threads-limit`

* Updated ArangoDB Starter to 0.14.15-1.

* Fixed agency redirect in poll API.

* Updated arangosync to 1.2.1.

* Added support for fetching the list of currently running and slow AQL queries
  from all databases at once, by adding an `all` parameter to the following
  query APIs:

  * `require("@arangodb/aql/queries").current({ all: true })`: will return the
    currently running queries from all databases, not just the currently
    selected database.
  * HTTP GET `/_api/query/current?all=true`: same, but for the HTTP REST API.
  * `require("@arangodb/aql/queries").slow({ all: true })`: will return the slow
    query history from all databases, not just the currently selected database.
  * HTTP GET `/_api/query/slow?all=true`: same, but for the HTTP REST API.
  * `require("@arangodb/aql/queries").clearSlow({ all: true })`: will clear the