@@ -1,6 +1,12 @@
 v3.7.6 (XXXX-XX-XX)
 -------------------
 
+* Fixed bug in the connection pool which could prevent connection reusage under
+  high load and lead to lots of new connection creations, in particular with
+  TLS.
+
+* Added more metrics around connection pool.
+
 * Fix a potential nullptr access in AsyncAgencyComm in case there was a specific
   error when sending an agency request.
 
